fixed an overlapping search field text

--- a/src/plugin_style.css
+++ b/src/plugin_style.css
@@ -126,6 +126,7 @@ input[type="text"] {
 
 #searchField {
     width: 100%;
+    padding-right: 18px;
 }
 
 #searchLabel {
